--- a/coms/CMakeLists.txt
+++ b/coms/CMakeLists.txt
@@ -1,2 +1,2 @@
 idf_component_register(SRCS "wifi.c" "http-req.c"
-                    INCLUDE_DIRS "includes")
+                    INCLUDE_DIRS "includes" REQUIRES esp_wifi nvs_flash)
