--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "main.c" INCLUDE_DIRS "." REQUIRES coms)
+idf_component_register(SRCS "main.c" INCLUDE_DIRS "." REQUIRES coms esp-idf-rc522-master )
